2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctools.test: Fixed use of duplicate test names

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* docidx.test: More boilerplate simplified via use of test support.
	* doctoc.test:
	* doctools.test:

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* docidx.test: Hooked into the new common test support code.
	* doctoc.test:
	* doctools.test:

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-03  Andreas Kupries <andreask@activestate.com>

	* checker.tcl:      Added code checking for ambiguities in section
	* mpformats/c.msg:  and subsection titles. It causes warnings.
	* mpformats/en.msg: Extended the message catalogs with strings for
	* mpformats/de.msg: the new warning.
	* mpformats/fr.msg:

2005-06-17  Andreas Kupries <andreask@activestate.com>

	* mpformats/_common.tcl (c_sectionId): Converting quotes into
	  underscores. Fixes [SF Tcllib Bug 1220089].

2005-06-06  Andreas Kupries <andreask@activestate.com>

	* mpformats/fr.msg: Fixed [Tcllib SF Bug 1213636], reported by
	  <sarnold75@users.sourceforge.net>, by removing the incorrect
	  english strings preceding the french ones.

2005-04-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctools.test: Testsuite package requirements fixed to ensure
	* docidx.test:   use of local packages.
	* doctoc.test:

	* doctools.tcl: Typo police.
	* docidx.tcl: 
	* doctoc.tcl: 

2005-02-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mpformats/_nroff.tcl: Fixed problem with comment
	  handling. Before the fix we could generate output where nroff
	  would misinterpret a string in apostrophes at the beginning of a
	  line as comment. Regular comments now have the special \1
	  quoting for markup.

	* fmt.nroff: Fixed list processing. The commands stating list