@@ -1,3 +1,8 @@
+2006-03-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* mpformats/_nroff.tcl: Do not double-quote (sub)section titles if
+	  they do not contain whitespaces.
+
 2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* doctools.test: Fixed use of duplicate test names
